<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorVScode"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/newUserHintEmail"/>
    <EditText
        android:id="@+id/txtNick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/newUserHintUserName"/>
    <EditText
        android:id="@+id/txtPass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/newUserHintPass1"/>
    <EditText
        android:id="@+id/txtPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/newUserHintPass2"/>
    <Button
        android:id="@+id/btCreateNewUser"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/action_create2"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>